# autoclosing_stream_tag

./: .gitignore  CMakeLists.txt
src/: autoclosing_tag.hpp
test/: autoclosing_tag_test.cpp
